--- a/gb/14/11/16/n4297458.md
+++ b/gb/14/11/16/n4297458.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qezyik366/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qezyik366/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qezyik366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qezyik366/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南回铁路电气化 先期工程动工</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2014年11月16日讯】（大纪元记者龙芳台湾<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>先期工程16日上午举行动土典礼，行政院副院长毛治国表示，这是串起环岛铁路电气化的最后一里路，完工后，<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%99%AE%E6%82%A0%E7%8E%9B.md#1">普悠玛</a>号不仅从花莲开到<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>，还会从台东开到高雄，台铁将加买<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%99%AE%E6%82%A0%E7%8E%9B.md#1">普悠玛</a>号列车。</p>
-<p>毛治国说，预计于2020年完成的<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>工程，总长约123.4公里，未来台东民众搭乘普悠玛号到高雄只要90分钟，台东人无论搭乘花东线或南回线都能在3.5小时抵达台北，享受更便利的对外交通。</p>
+<p>【大纪元2014年11月16日讯】（大纪元记者龙芳台湾<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>先期工程16日上午举行动土典礼，行政院副院长毛治国表示，这是串起环岛铁路电气化的最后一里路，完工后，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%99%AE%E6%82%A0%E7%8E%9B.md#1">普悠玛</a>号不仅从花莲开到<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>，还会从台东开到高雄，台铁将加买<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%99%AE%E6%82%A0%E7%8E%9B.md#1">普悠玛</a>号列车。</p>
+<p>毛治国说，预计于2020年完成的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>工程，总长约123.4公里，未来台东民众搭乘普悠玛号到高雄只要90分钟，台东人无论搭乘花东线或南回线都能在3.5小时抵达台北，享受更便利的对外交通。</p>
 <p>毛治国与交通部长叶匡时16日共同到场祝贺，台东县长候选人，现任立委刘櫂豪和现任县长黄健庭也意外同台。黄健庭表示，他在立法院时的要求，环岛铁路全面电气化和双轨化，现在都启动了。刘櫂豪强调，因为竞争带来的动力，才使得停滞30年的台东基础建设得以加速发展。◇</p>
 <p>责任编辑：叶琴</p>
 
@@ -14,47 +14,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/9/7/7/n2581739.md#1">经建会：通过南回铁路电气化可行性研究</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/2/n3954635.md#1">南回铁路  预计午前通车</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/21/n3969047.md#1">天兔来袭  影响高市对外交通</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/22/n3969622.md#1">南回铁路土石崩  已清理完</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/22/n3969645.md#1">土石埋轨  打乱南回列车交通</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/14/6/11/n4176216.md#1">花东铁路秀愿景 朝一日生活圈迈进</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/14/6/29/n4189228.md#1">普悠玛热力四射 卑南族亦喜亦忧</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/14/7/1/n4190730.md#1">首班普悠玛抵东 乘客直呼幸运</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/14/7/18/n4203663.md#1">枋寮不要公路陆桥  要铁路高架</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/14/8/2/n4215463.md#1">试营普悠玛直奔台东  6日上路</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/7/7/n2581739.md#1">经建会：通过南回铁路电气化可行性研究</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/2/n3954635.md#1">南回铁路  预计午前通车</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/21/n3969047.md#1">天兔来袭  影响高市对外交通</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/22/n3969622.md#1">南回铁路土石崩  已清理完</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/22/n3969645.md#1">土石埋轨  打乱南回列车交通</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/11/n4176216.md#1">花东铁路秀愿景 朝一日生活圈迈进</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/29/n4189228.md#1">普悠玛热力四射 卑南族亦喜亦忧</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/7/1/n4190730.md#1">首班普悠玛抵东 乘客直呼幸运</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/7/18/n4203663.md#1">枋寮不要公路陆桥  要铁路高架</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/8/2/n4215463.md#1">试营普悠玛直奔台东  6日上路</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/23/n13668398.md#1">【百年真相】最危险的人？王沪宁如何给习当高参</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/21/12/23/n13456065.md#1">【百年真相】红色漩涡中沉浮 田汉道不尽的悲哀</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/4/n13693691.md#1">【馨香雅句】班昭留给后世女子的智慧</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/5/n13697243.md#1">【奇案】“午时三刻”开斩前翻案的奇案</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/16/n13649085.md#1">【人生之钥】官家公子强抢民女 遭“绝后”的惩戒</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709390.md#1">【器乐独奏与协奏曲】维厄当A小调第五号小提琴协奏曲，作品37号</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709424.md#1">【远见快评】清零是科学？暗藏两大陷阱</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709244.md#1">【微视频】居民自救到自治 上海自治组被取缔</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/16/n13649272.md#1">营养师推荐六种Costco健康食物 可储存备用</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708422.md#1">哈佛营养师推荐：早餐首选食物 抗大脑衰老</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708544.md#1">网传录音：上海警察抓夫妻进方舱 妻以死抗争</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708522.md#1">陈浩民妻吐槽上海封控生活：两斤菜花逾千元</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708485.md#1">范冰冰赴韩拍戏出意外？额头伤疤近照曝光</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13708587.md#1">上海网红1根黄瓜吃两天 封城前后对比照惊人</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/9/n13706815.md#1">BTS入围告示牌音乐奖六部门 自身新纪录</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13707981.md#1">苦中学习成长将迎来明朗 雨琦感激世正鼓励</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708269.md#1">69岁的他血管才32岁 香蕉1吃法抗氧化力翻倍</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/7/n13702657.md#1">头皮容易出油、掉发？这样洗头保护头皮、不发痒</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/6/n13698839.md#1">雨天真的容易关节痛？2方法保养、防发作</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708184.md#1">极简生活不是狂丢东西 懂这个心法才是最高境界</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/9/n13707109.md#1">【健康1+1】新变种病毒XE、XD、XF</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qezyik366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qezyik366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/11/16/n4297458.htm">南回铁路电气化 先期工程动工</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/11/16/n4297458.htm">南回铁路电气化 先期工程动工</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qezyik366/djy/blob/master/gb/14/11/16/n4297458.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qezyik366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qezyik366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qezyik366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/14/11/16/n4297458.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
